feishu/tests/snapshots/cards_test__permission_card_snapshot.snap
---
source: feishu/tests/cards_test.rs
assertion_line: 22
expression: card
---
schema: "2.0"
header:
  title:
    content: ⚠ 权限请求
    tag: plain_text
  template: orange
body:
  elements:
    - tag: markdown
      content: "**Bash** 想要执行："
    - tag: markdown
      content: "```json\n{\n  \"cmd\": \"rm -rf\"\n}\n```"
    - tag: div
      text:
        tag: plain_text
        content: Allow once = 这一次 · Allow session = 本会话同签名全部 · Deny = 拒绝
        text_size: notation
        text_color: grey
    - tag: action
      actions:
        - tag: button
          text:
            tag: plain_text
            content: Allow once
          type: primary
          value:
            decision: allow_once
            request_id: r1
            session_id: s1
          behaviors:
            - type: callback
              value:
                decision: allow_once
                request_id: r1
                session_id: s1
        - tag: button
          text:
            tag: plain_text
            content: Allow session
          type: default
          value:
            decision: allow_session
            request_id: r1
            session_id: s1
          behaviors:
            - type: callback
              value:
                decision: allow_session
                request_id: r1
                session_id: s1
        - tag: button
          text:
            tag: plain_text
            content: Deny
          type: danger
          value:
            decision: deny
            request_id: r1
            session_id: s1
          behaviors:
            - type: callback
              value:
                decision: deny
                request_id: r1
                session_id: s1
