feishu/tests/snapshots/cards_test__root_card_after_text_delta_snapshot.snap
---
source: feishu/tests/cards_test.rs
expression: card
---
schema: "2.0"
header:
  title:
    content: 🚧 Claude Code
    tag: plain_text
  template: blue
body:
  elements:
    - tag: markdown
      content: "> 重构 src/foo.rs"
    - {}
    - tag: div
      text:
        tag: plain_text
        content: "msg_id: msg_1"
        text_size: notation
        text_color: grey
    - tag: markdown
      content: 我会先看一下 foo.rs 的结构。
